
      \item The \code{plot} method for \code{ppr} got enhanced default
      labels (xmin and main).

      \item \code{sample.int()} got an explicit \code{useHash} option
      (with a back compatible default).

      \item \code{identical()} gets an \code{ignore.srcref} option
      which drops \code{"srcref"} and similar attributes when true (as
      by default).
    }
  }
  \subsection{DEPRECATED AND DEFUNCT}{
    \itemize{
      \item The deprecated support for PCRE versions 8.10 to 8.31 will
      be removed prior to \R 3.4.0.

      \item (Windows only) Function \code{setInternet2()} is defunct.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Getting or setting \code{body()} or \code{formals()} on
      non-functions for now signals a warning and may become an error
      for setting.

      \item When a class name matches multiple classes in the cache,
      perform a dynamic search in order to obey namespace imports. This
      should eliminate annoying messages about multiple hits in the
      class cache. Also, pass along the package from the
      \code{ClassExtends} object when looking up superclasses in the
      cache.

      \item \code{match(x, t)}, \code{duplicated(x)} and
      \code{unique(x)} work as documented for complex numbers with \code{NA}s
      or \code{NaN}s, namely by treating them as two equivalence
      \dQuote{classes}, those with \code{NA} and those with
      non-\code{NA} \code{NaN}s.
      %% \code{print(x)} remains back compatible, treating all
      %% \code{NA}s identically, but showing real and imaginary parts
      %% for the \code{NaN} \dQuote{class}.

      \item The API for readline libraries >= 6.3 had changed such
      terminal window resizes where no longer properly signalled
      (\PR{16604}).  Also, \command{Ctrl C} in incremental search
      behaved confusingly in \R (unix) consoles (\PR{16603}) also for
      older readline versions.  These have been fixed (for readline >=